Wedding planner information added

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
             <div class="wp3">
+              <h3>Ceremonia</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
               <p>
@@ -187,6 +188,7 @@
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
             <div class="wp4">
+              <h3>Recepción</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
               <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
               <p>
@@ -387,19 +389,13 @@
                   <p>Calle Jesús Maestro #5, Mirador Sur, Santo Domingo, Distrito Nacional, República Dominicana </p>
                 </div>
                 <div class="col-md-6">
-                  <h5>Mariela Nouel</h5>
+                  <h5>Hilda Hidalgo</h5>
+                  <h6>Wedding Planner</h6>
                   <p>
                     <i class="fa fa-mobile"></i>
-                    <a href="tel://+18298529862">+1 829 852 9862</a><br />
+                    <a href="tel://+18298529862">+1 829 342 7066</a><br />
                     <i class="fa fa-whatsapp"></i>
-                    <a href="https://wa.me/+18298529862">WhatsApp</a>
-                  </p>
-                  <h5>Emmanuel Polanco</h5>
-                  <p>
-                    <i class="fa fa-mobile"></i>
-                    <a href="tel://+18094302433">+1 809 430 2433</a><br />
-                    <i class="fa fa-whatsapp"></i>
-                    <a href="https://wa.me/+18094302433">WhatsApp</a>
+                    <a href="https://wa.me/+18293427066">WhatsApp</a>
                   </p>
                 </div>
               </div>
@@ -445,26 +441,12 @@
                 </div>
                 <div class="col-md-6">
                   <h5>Hilda Hidalgo</h5>
-                  <h3>Wedding Planner</h3>
+                  <h6>Wedding Planner</h6>
                   <p>
                     <i class="fa fa-mobile"></i>
                     <a href="tel://+18298529862">+1 829 342 7066</a><br />
                     <i class="fa fa-whatsapp"></i>
                     <a href="https://wa.me/+18293427066">WhatsApp</a>
-                  </p>
-                  <h5>Mariela Nouel</h5>
-                  <p>
-                    <i class="fa fa-mobile"></i>
-                    <a href="tel://+18298529862">+1 829 852 9862</a><br />
-                    <i class="fa fa-whatsapp"></i>
-                    <a href="https://wa.me/+18298529862">WhatsApp</a>
-                  </p>
-                  <h5>Emmanuel Polanco</h5>
-                  <p>
-                    <i class="fa fa-mobile"></i>
-                    <a href="tel://+18094302433">+1 809 430 2433</a><br />
-                    <i class="fa fa-whatsapp"></i>
-                    <a href="https://wa.me/+18094302433">WhatsApp</a>
                   </p>
                 </div>
               </div>
