--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             <p>
               A principios del 2021, unos amigos organizaron una actividad recreacional en el Jardín Botánico
               de Santo Domingo, en la cual nos conocimos y tuvimos una conexión instantánea.
-              Despues de alugnas salidas juntos y algunas otras actividades con nuestros amigos, 
-              el 16 de mayo del 2021, marco el inicio de nuestra relación, y el resto es historia :) 
+              Después de algunas salidas juntos y algunas otras actividades con nuestros amigos, 
+              el 16 de mayo del 2021, marcó el inicio de nuestra relación, y el resto es historia. 
             </p>
           </div>
         </div>
@@ -511,14 +511,14 @@
               </p>
               <h5>Banco Popular</h5>
               <ul>
-                <li><strong>Numero de Cuenta: </strong><span id="account-popular">8311559383</span> <button class="btn btn-link" onclick="copyToClipboard('account-popular')"><i class="fa fa-clipboard"></i></button></li>
+                <li><strong>Número de Cuenta: </strong><span id="account-popular">8311559383</span> <button class="btn btn-link" onclick="copyToClipboard('account-popular')"><i class="fa fa-clipboard"></i></button></li>
                 <li><strong>Nombre Titular: </strong>Emmanuel Polanco y/o Mariela Nouel</li>
                 <li><strong>Tipo de cuenta: </strong>Ahorros</li>
                 <li><strong>Cédula: </strong><span id="cedula-popular">40225553375</span> <button class="btn btn-link" onclick="copyToClipboard('cedula-popular')"><i class="fa fa-clipboard"></i></button></li>
               </ul>
               <h5>Banco BHD</h5>
               <ul>
-                <li><strong>Numero de Cuenta: </strong><span id="account-bhd">34295740014</span><button class="btn btn-link" onclick="copyToClipboard('account-bhd')"><i class="fa fa-clipboard"></i></button></li>
+                <li><strong>Número de Cuenta: </strong><span id="account-bhd">34295740014</span><button class="btn btn-link" onclick="copyToClipboard('account-bhd')"><i class="fa fa-clipboard"></i></button></li>
                 <li><strong>Nombre Titular: </strong>Emmanuel Polanco y/o Mariela Nouel</li>
                 <li><strong>Tipo de cuenta: </strong>Ahorros</li>
                 <li><strong>Cédula: </strong><span id="cedula-bhd">40225553375</span> <button class="btn btn-link" onclick="copyToClipboard('cedula-bhd')"><i class="fa fa-clipboard"></i></button></li>
