Wedding gift list Casa Cuesta added

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="wp3">
               <h3>Ceremonia</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
-              <h5>Parroquia Jesús Maestro<span class="time">6PM - 8PM</span></h5>
+              <h5>Parroquia Jesús Maestro<span class="time">7:00 PM</span></h5>
               <p>
                 La ceremonia de bodas sera realizada al estilo tradicional 
                 en la Iglesia Católica. Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
@@ -190,9 +190,9 @@
             <div class="wp4">
               <h3>Recepción</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
-              <h5>Club Deportivo Naco - Extensión Salon Principal <span class="time">9PM - 3AM</span></h5>
+              <h5>Club Deportivo Naco - Salón Anexo <span class="time">9:00 PM</span></h5>
               <p>
-                La recepción será celebrada en el Salon Extension Salon Principal del Club Deportivo Naco. 
+                La recepción será celebrada en el Salón Anexo del Club Deportivo Naco. 
                 Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
                 de este evento. Les recuerdo que para la recepción, <strong>los niños no estan permitidos.</strong>
               </p>
@@ -489,7 +489,7 @@
             </div>
             <div class="row">
               <div class="col-md-3 col-sm-12 col-xs-12 text-center align-self-center">
-                <a href="#" target="_blank" class="hidden">
+                <a href="https://listaderegalos.casacuesta.com/Event/MarielaAlejandra-Emmanuel?utm_source=share" target="_blank">
                   <img height="100px" src="img/cuesta-logo.jpeg"/>
                   <h5>Casa Cuesta</h5>
                 </a>
