Update dress code

--- a/index.html
+++ b/index.html
@@ -236,10 +236,15 @@
                   href="https://pin.it/6PTGfH649"
                   target="_blank"
                   >Link</a
-                >. 
-                Favor no usar los siguientes colores: 
-                Blanco, Negro, Rosado, Azul y Crema
+                >.
               </p>
+              <p>
+                Por favor, sobre todo las damas, no usar los siguientes colores: Blanco, Negro, Rosado, Azul y Crema.
+              </p>
+              <p>
+                Los caballeros si pueden usar chaquetas o trajes de color negro o azul. 
+              </p>
+              <br />
             </div>
           </div>
           <!-- /.modal-content -->
