Update dress code x2

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 Por favor, sobre todo las damas, no usar los siguientes colores: Blanco, Negro, Rosado, Azul y Crema.
               </p>
               <p>
-                Los caballeros si pueden usar chaquetas o trajes de color negro o azul. 
+                Los caballeros si pueden usar chaquetas o trajes de color negro, crema o azul. 
               </p>
               <br />
             </div>
