Update reception date time

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="wp3">
               <h3>Ceremonia</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
-              <h5>Parroquia Jesús Maestro<span class="time">7:00 PM</span></h5>
+              <h5>Parroquia Jesús Maestro <span class="time">7:00 PM</span></h5>
               <p>
                 La ceremonia de bodas sera realizada al estilo tradicional 
                 en la Iglesia Católica. Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
@@ -190,9 +190,9 @@
             <div class="wp4">
               <h3>Recepción</h3>
               <p><strong>16 de Mayo del 2025</strong></p>
-              <h5>Club Deportivo Naco - Salón Anexo <span class="time">9:00 PM</span></h5>
+              <h5>Club Deportivo Naco - Salón Principal <span class="time">8:00 PM</span></h5>
               <p>
-                La recepción será celebrada en el Salón Anexo del Club Deportivo Naco. 
+                La recepción será celebrada en el Salón Principal del Club Deportivo Naco. 
                 Por favor revisar el <a href="#dress-code-btn">código de vestimenta</a>
                 de este evento. Les recuerdo que para la recepción, <strong>los niños no estan permitidos.</strong>
               </p>
@@ -226,8 +226,8 @@
                 <span>&times;</span>
               </button>
               <h3 class="text-center section-padding">¿Cuál es el Codigo de Vestimenta?</h3>
-              <h5>Parroquia Jesús Maestro <span class="time">7PM</span></h5>
-              <h5>Club Deportivo Naco - Extension Salon Principal <span class="time">9PM</span></h5>
+              <h5>Parroquia Jesús Maestro <span class="time">7:00PM</span></h5>
+              <h5>Club Deportivo Naco - Salon Principal <span class="time">8:00PM</span></h5>
               <p>
                 <strong>Ropa formal</strong>
                 <br />
